==> Embedfire-rt1021/ebf_i.mxrt1021_code/RT1021_触摸画板/user/bsp/lcd/bsp_ili9341_lcd.c <==
#include <stdint.h>
#include "bsp_ili9341_lcd.h"
#include "board.h"
#include "./font/fonts.h"

void ILI9341_Init ( void )
{
	gpio_pin_config_t gpio_pin_config = {kGPIO_DigitalOutput, 1, kGPIO_NoIntmode};

	GPIO_PinInit(ILI9341_RESET_GPIO, ILI9341_RESET_GPIO_PIN, &gpio_pin_config);
	GPIO_PinInit(ILI9341_BL_GPIO, ILI9341_BL_GPIO_PIN, &gpio_pin_config);

	CPU_TS_TmrInit();
	/* Reset ILI9341. */
	ILI9341_Rst ();
	ILI9341_REG_Config ();
	ILI9341_BackLed_Control(ENABLE);
	//设置默认扫描方向，其中 6 模式为大部分液晶例程的默认显示方向  
	ILI9341_GramScan(LCD_SCAN_MODE);
}

void ILI9341_BackLed_Control ( FunctionalState enumState )
{
    if(enumState)
    {
        GPIO_PinWrite(ILI9341_BL_GPIO, ILI9341_BL_GPIO_PIN, 0u);
    }
    else
    {
        GPIO_PinWrite(ILI9341_BL_GPIO, ILI9341_BL_GPIO_PIN, 1u);
    }
		
}

void ILI9341_Rst ( void )
{			
	GPIO_PinWrite(ILI9341_RESET_GPIO, ILI9341_RESET_GPIO_PIN, 0u);	 //低电平复位

	ILI9341_Delay ( 0xAFF ); 					   

	GPIO_PinWrite(ILI9341_RESET_GPIO, ILI9341_RESET_GPIO_PIN, 1u);	 	 

	ILI9341_Delay ( 0xAFF ); 	
	
}
